--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch>=2.0.0
-transformers==4.36.2
-accelerate>=0.25.0
-sentencepiece
-tokenizers
-protobuf
-safetensors 
+torch==1.10.2
+transformers==4.18.0
+accelerate==0.12.0
+sentencepiece==0.2.0
+tokenizers==0.12.1
+protobuf==3.19.6
+numpy==1.19.5
+typing-extensions==4.1.1 
