--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 torch>=1.12.0
 transformers==4.10.0
-accelerate==0.9.0
+accelerate>=0.26.0
 sentencepiece==0.2.0
 tokenizers==0.10.3
 protobuf==3.19.6
 numpy==1.19.5
 typing-extensions==4.1.1
 requests==2.27.1
+urllib3<2.0.0
 tqdm==4.64.1
 regex==2023.8.8
 packaging==21.3 
