--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch>=1.12.0
 transformers==4.10.0
-accelerate>=0.26.0
+accelerate==0.9.0
 sentencepiece==0.2.0
 tokenizers==0.10.3
 protobuf==3.19.6
