--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ transformers==4.10.0
 accelerate==0.9.0
 sentencepiece==0.2.0
 tokenizers==0.10.3
-protobuf==3.19.6
+protobuf>=3.19.0
 numpy==1.19.5
 typing-extensions==4.1.1
 requests==2.27.1
 urllib3<2.0.0
 tqdm==4.64.1
 regex==2023.8.8
-packaging==21.3 
+packaging==21.3
+cpm_kernels
+icetk 
