--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch>=1.12.0
 transformers==4.10.0
 accelerate==0.9.0
-sentencepiece==0.2.0
+sentencepiece>=0.1.99
 tokenizers==0.10.3
 protobuf>=3.19.0
 numpy==1.19.5
