--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,9 @@ tqdm==4.64.1
 regex==2023.8.8
 packaging==21.3
 cpm_kernels
-icetk 
+icetk
+fastapi>=0.68.0
+uvicorn>=0.15.0
+sse-starlette>=0.7.0
+pydantic>=1.8.0
+python-multipart 
