--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,8 @@ fastapi>=0.68.0
 uvicorn>=0.15.0
 sse-starlette>=0.7.0
 pydantic>=1.8.0
-python-multipart 
+python-multipart
+bitsandbytes>=0.41.1
+accelerate>=0.21.0
+scipy>=1.11.2
+einops>=0.6.1 
