--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 torch>=1.12.0
-transformers==4.10.0
-accelerate==0.9.0
+transformers>=4.30.0
+accelerate>=0.26.0
 sentencepiece>=0.1.99
-tokenizers==0.10.3
+tokenizers>=0.13.0
 protobuf>=3.19.0
-numpy==1.19.5
+numpy>=1.21.0
 typing-extensions==4.1.1
 requests==2.27.1
 urllib3<2.0.0
@@ -19,6 +19,5 @@ sse-starlette>=0.7.0
 pydantic>=1.8.0
 python-multipart
 bitsandbytes>=0.41.1
-accelerate>=0.21.0
 scipy>=1.11.2
 einops>=0.6.1 
